<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.nphstudio.mooveeon.ui.splash.SplashFragment"
        android:label=""
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_language"
            app:destination="@id/languageFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.nphstudio.mooveeon.ui.language.LanguageFragment"
        android:label="@string/select_language"
        tools:layout="@layout/fragment_language">
        <argument
            android:name="fromSettings"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_language_to_onboarding"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/languageFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_language_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/languageFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.nphstudio.mooveeon.ui.onboarding.OnboardingFragment"
        android:label="@string/onboarding_title"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nphstudio.mooveeon.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.nphstudio.mooveeon.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
    </fragment>

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.nphstudio.mooveeon.ui.feed.FeedFragment"
        android:label="@string/nav_play"
        tools:layout="@layout/fragment_feed">
        <argument
            android:name="drama"
            app:argType="com.nphstudio.mooveeon.data.model.DramaSeries"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.nphstudio.mooveeon.ui.discover.DiscoverFragment"
        android:label="@string/nav_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_discoverFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.nphstudio.mooveeon.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.nphstudio.mooveeon.ui.settings.SettingsFragment"
        android:label="@string/nav_me"
        tools:layout="@layout/fragment_settings" />

</navigation>
